# api.translator-t5-base

./: .flake8  .gitignore  .isort.cfg  LICENSE  README.md  docker-compose.yml  pyproject.toml
scripts/: all-checks.sh  black-check.sh  flake8-check.sh  isort-check.sh  run-tests.sh  run.sh
src/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
src/api/v1/: router.py  translate.py
src/core/: config.py
src/model/: __init__.py
src/schemas/: translate.py
src/services/: translate.py  translator.py
src/tests/: conftest.py  test_api.py  test_main.py
src/tests/api/: test_translate.py
src/tests/services/: test_translate.py
