[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["horlali <gideon.ahiadzi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.0"
transformers = {extras = ["torch"], version = "^4.21.1"}
sentencepiece = "^0.1.97"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
